# phase-5-cloud-deployment

./: .dockerignore  .dockerignore.bak  .env.kagent.example  .gitignore  CLAUDE.md  PROJECT_ORGANIZATION.md  README.md  docker-compose.test.yml  grafana-ingress.yaml  pyproject.toml  pytest.ini
.claude/: README.md  skills-config.yaml
.claude/agents/: api-integration.md  auth-specialist.md  crud-task-implementer.md  database-schema-designer.md  deployment-specialist.md  fastapi-backend.md  i18n-urdu-specialist.md  intent-parser.md  nextjs-frontend-architect.md  (+6 more)
.github/: SETUP_SECRETS.md  production-values.template.yaml  verify-setup.sh
backend/: run_backend.sh
dapr-components/: kafka-pubsub.yaml
db/: .env.db.template  init.sql  postgresql.conf
docs/: AZURE-DEPLOYMENT.md  DIRECTORY_STRUCTURE.md  DOCKERFILE_OPTIMIZATION.md  DOCKER_DESKTOP_TROUBLESHOOTING_GUIDE.md  DOCKER_INSTALLATION.md  GORDON_SETUP.md  KAGENT_SETUP.md  KAGENT_USAGE.md  KUBERNETES_DEPLOYMENT_COMPLETION_SUMMARY.md  KUBERNETES_QUICK_START.md  RENDER_DEPLOYMENT.md  TROUBLESHOOTING_DOCKER.md  database-setup.md
misc/: ARCHIVE_INDEX.md
scripts/: azure-setup.sh  check-gordon.sh  configure-kagent.sh  create-directory-structure.sh  deploy-minikube.sh  environment-setup-validation.sh  final-validation.sh  install-kagent.sh  setup-docker-resources.sh  show-directory-tree.sh  test-deployment.sh  verify-deployment.sh  verify-directory-structure.sh  verify-docker.sh  verify-kagent.sh  verify-prerequisites.sh
specs/: mission-impossible-ui-design.md
tests/: conftest.py  requirements-test.txt
(+589 files in other folders)
