[project]
name = "todo-evolution"
version = "0.2.0"
description = "Multi-phase todo application from CLI to cloud-native AI systems"
authors = [{name = "Hackathon Team"}]
requires-python = ">=3.13"
dependencies = [
    "rich>=13.0",
    "art>=6.0",
    "questionary>=2.0",
    "emoji>=2.0",
    "dateparser>=1.2.0",
    "speechrecognition>=3.14.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pylint>=3.0",
    "mypy>=1.0",
    "black>=23.0",
]
web = [
    "fastapi>=0.104",
    "sqlmodel>=0.0.14",
    "uvicorn[standard]>=0.24",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.6",
    "alembic>=1.12",
]
voice = [
    "SpeechRecognition>=3.10.0",
    "PyAudio>=0.2.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.black]
line-length = 100
target-version = ['py313']

[tool.pylint.messages_control]
max-line-length = 100
disable = ["C0111", "R0903"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
